Remap some auth error codes for user register, reset password, and verify email flows and fix OpenAPI docs. #211
